tests/fixtures/errors/chars_after_comment.s
.name "Chars after comment"
.comment "chars after comment" a

init:
    st r1, :init
